--- a/WPFSQLHardver.csproj
+++ b/WPFSQLHardver.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="MySql.Data" Version="8.0.33" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="sablon.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
